--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@unform/web": "^2.1.6",
     "axios": "^0.21.4",
     "dotenv": "^10.0.0",
+    "html-react-parser": "^1.4.8",
     "js-cookie": "^3.0.1",
     "next": "11.1.2",
     "next-auth": "^4.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
     "styled-components": "^5.3.0",
     "swiper": "^8.0.6",
