--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "html-react-parser": "^1.4.8",
     "js-cookie": "^3.0.1",
     "next": "11.1.2",
+    "next-auth": "^3.29.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
